--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
-  background-image: url('http://mdbootstrap.com/img/Photos/Horizontal/Nature/full page/img%20(23).jpg');
+  background-image: url('https://www.publicdomainpictures.net/pictures/10000/velka/1-1229115491GHkw.jpg');
   background-size: cover;
-  height: 180vh;
+  height: 200vh;
 }
 
 body {
