--- a/src/Landing/Landing.css
+++ b/src/Landing/Landing.css
@@ -3,9 +3,7 @@
 font-family: "Open Sans", Helvetica, Arial, sans-serif;
 }
 
-.navbar.scrolling-navbar {
-  color: rgb(0, 0, 0, 0);
-}
+
 
 #landing .navbar.scrolling-navbar.top-nav-collapse  {
   background-color: rgba(13, 12, 14, 0.6);
@@ -297,4 +295,18 @@ svg {
 h5 {
   display: inline-block;
   margin: 0;
+}
+
+#glowie{
+  text-shadow:0px 1px 8px rgb(255, 255, 255);
+}
+
+#NB:hover {
+  color: yellow;
+  text-shadow:0px 1px 18px rgb(255, 255, 255);
+}
+
+#NBA {
+  color: yellow;
+  text-shadow:0px 1px 12px rgb(255, 255, 255);
 }
