--- a/src/Projects/Projects.css
+++ b/src/Projects/Projects.css
@@ -1,11 +1,11 @@
 #projects {
 font-family: "Open Sans", Helvetica, Arial, sans-serif;
 }
-  
+
   
   .navbar.scrolling-navbar.top-nav-collapse  {
     color: rgb(255, 255, 255);
-    background-color: rgba(170, 85, 255, 0.865);
+    background-color: rgba(0, 0, 0, 1);
   }
   
   .navbar.scrolling-navbar.top-nav-collapse span  {
@@ -14,9 +14,10 @@ font-family: "Open Sans", Helvetica, Arial, sans-serif;
 
 
   #projects {
+    font-family: "Open Sans", Helvetica, Arial, sans-serif;
     background: url('https://images.unsplash.com/photo-1457365050282-c53d772ef8b2')no-repeat center center;
     background-size: cover;
-    height: 100vh;
+background-attachment: fixed;
   }
   
   
