--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,6 @@
-body {
-    background-image: url('https://www.publicdomainpictures.net/pictures/10000/velka/1-1229115491GHkw.jpg');
-    background-size: cover;
-    height: 200vh;
-  }
-  
-  body {
-    margin: 0;
-    padding: 0;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-      "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-      sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  }
-  
-  code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-      monospace;
-  }
+body{
+  font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  background: radial-gradient(#ffffff, rgb(255, 255, 255));
+  height: 100vh;
+  list-style-type: none;
+}
